--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -17,11 +17,11 @@ button:focus {outline:0 !important;}
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?h4yf3f');
-	src:url('fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
-		url('fonts/icomoon.woff?h4yf3f') format('woff'),
-		url('fonts/icomoon.ttf?h4yf3f') format('truetype'),
-		url('fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
+	src:font-url('fonts/icomoon.eot?h4yf3f');
+	src:font-url('fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
+		font-url('fonts/icomoon.woff?h4yf3f') format('woff'),
+		font-url('fonts/icomoon.ttf?h4yf3f') format('truetype'),
+		font-url('fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
