Run the web cam only in index page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -103,6 +103,7 @@
 <script src="/js/dependencies/jquery.scrollmagic.js"></script>
 <script src="/js/dependencies/bootstrap/bootstrap.min.js"></script>
 <script src="/js/dependencies/jquery.easing.js"></script>
+<script src="/js/dependencies/jquery.scrollto.js"></script>
 <script src="/js/dependencies/tracking-min.js"></script>
 <script src="/js/lib/app-utils.js"></script>
 <script src="/js/lib/media.js"></script>
