--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -102,6 +102,7 @@
 <script src="/js/dependencies/jquery.scrollTo.js"></script>
 <script src="/js/dependencies/jquery.scrollmagic.js"></script>
 <script src="/js/dependencies/bootstrap/bootstrap.min.js"></script>
+<script src="/js/dependencies/isotope.pkgd.min.js"></script>
 <script src="/js/dependencies/jquery.easing.js"></script>
 <script src="/js/dependencies/jquery.scrollto.js"></script>
 <script src="/js/dependencies/tracking-min.js"></script>
