--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,66 +1,69 @@
-<div id="my_camera"></div>		
-	<!-- A button for taking snaps -->
-	<form class="snap-button">
-		<input type="button" class="snap-button" onClick="take_snapshot()">
-		<span class="icon-uniE606"></span>
-	</form>
-<!-- <div id="results">Your captured image will appear here...</div> -->
-
-<div class="horizontal-container row">
-	<div class="colour-wrapper container">
-		<ul class="list-inline">
-			<li class="poppy-red">
-				<span class="colour-box"></span>
-				<div class="colour-box-hover">poppy red</div>
-			</li>
-			<li class="nectarine">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">nectarine</div>
-			</li>
-			<li class="lemon-zest">
-				<span class="colour-box lemon-zest"></span>		
-				<div class="colour-box-hover">lemon-zest</div>
-			</li>
-			<li class="tender-shoots">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">tender-shoots</div>
-			</li>
-			<li class="emerald">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">emerald</div>
-			</li>
-			<li class="dusk-blue">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">dusk-blue</div>
-			</li>
-			<li class="african-violet">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">african-violet</div>
-			</li>
-			<li class="ballerenia-pink">
-				<span class="colour-box"></span>		
-				<div class="colour-box-hover">linen</div>
-			</li>
-			<li class="pewter-grey">
-				<span class="colour-box"></span>			
-				<div class="colour-box-hover">tidal-foam</div>
-			</li>
-			<li class="black">
-				<span class="colour-box"></span>			
-				<div class="colour-box-hover">alloy</div>
-			</li>
-			<li class="camping-brown">
-				<span class="colour-box"></span>
-				<div class="colour-box-hover">sunflower</div>
-			</li>
-			<li class="white">
-				<span class="colour-box"></span>	
-				<div class="colour-box-hover">vibrant orange</div>
-			</li>
-		</ul>
+<div class="camera-wrapper">
+	<div id="my_camera"></div>		
+		<!-- A button for taking snaps -->
+		<form class="snap-button-wrapper">
+			<div>
+				<input type="button" class="snap-button" onClick="take_snapshot()"><br>
+				<span class="icon-uniE606 camera-icon"></span>
+			</div>
+		</form>
+	<!-- <div id="results">Your captured image will appear here...</div> -->
+	<h4>Pick a colour that represents your mood.</h4>
+	<div class="horizontal-container row">
+		<div class="colour-wrapper">
+			<ul class="list-inline">
+				<li class="poppy-red element-item">
+					<span class="colour-box"></span>
+					<div class="colour-box-hover">poppy red</div>
+				</li>
+				<li class="nectarine element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">nectarine</div>
+				</li>
+				<li class="lemon-zest element-item">
+					<span class="colour-box lemon-zest"></span>		
+					<div class="colour-box-hover">lemon-zest</div>
+				</li>
+				<li class="tender-shoots element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">tender-shoots</div>
+				</li>
+				<li class="emerald element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">emerald</div>
+				</li>
+				<li class="dusk-blue element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">dusk-blue</div>
+				</li>
+				<li class="african-violet element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">african-violet</div>
+				</li>
+				<li class="ballerenia-pink element-item">
+					<span class="colour-box"></span>		
+					<div class="colour-box-hover">linen</div>
+				</li>
+				<li class="pewter-grey element-item">
+					<span class="colour-box"></span>			
+					<div class="colour-box-hover">tidal-foam</div>
+				</li>
+				<li class="black element-item">
+					<span class="colour-box"></span>			
+					<div class="colour-box-hover">alloy</div>
+				</li>
+				<li class="camping-brown element-item">
+					<span class="colour-box"></span>
+					<div class="colour-box-hover">sunflower</div>
+				</li>
+				<li class="white element-item">
+					<span class="colour-box"></span>	
+					<div class="colour-box-hover">vibrant orange</div>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
-
 
 
 
