--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,18 +10,22 @@ body {
 /*::-webkit-scrollbar { 
     display: none; 
 }*/
-button:focus {outline:0 !important;}
+input:focus {outline:0 !important;}
+
+.list-inline {
+	margin-left: 0;
+}
 /**
  *  Weather icons
  */
 
 @font-face {
 	font-family: 'icomoon';
-	src:font-url('fonts/icomoon.eot?h4yf3f');
-	src:font-url('fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
-		font-url('fonts/icomoon.woff?h4yf3f') format('woff'),
-		font-url('fonts/icomoon.ttf?h4yf3f') format('truetype'),
-		font-url('fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?h4yf3f');
+	src:url('fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
+		url('fonts/icomoon.woff?h4yf3f') format('woff'),
+		url('fonts/icomoon.ttf?h4yf3f') format('truetype'),
+		url('fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -71,6 +75,7 @@ button:focus {outline:0 !important;}
 	right: 0;
 	padding: 10px;
 	opacity: 0.7;
+	color: white;
 }
 
 .weather {
@@ -85,23 +90,50 @@ button:focus {outline:0 !important;}
 /*
 	Camera
  */
-.snap-button {
-	position: absolute;
-	left: 45%;
+.snap-button-wrapper {
 	bottom: 20%;
-	background: none;
-	border: none;
+	width: 100%;
+	text-align: center;
+	position: absolute;
 }
 
-.icon-uniE606 {
+.snap-button {
+	background: none;
+	border: none;
+	width: 50px;
+	height: 50px;
+}
+
+#my_camera {
+	height: 600px;
+}
+
+.camera-icon {
 	font-size: 23px;
 	border: 1px solid white;
 	border-radius: 74px;
-	padding: 11px;
+	padding: 12px;
 	color: white;
 	background-color: black;
 }
 
+.camera-wrapper {
+	position: relative;
+}
+
+.camera-wrapper h4 {
+	color: #fff;
+	text-align: center;
+}
+
+#my_camera>video {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	z-index: -1;
+}
+
+/* End Camera Styling */
 #wrapper {
 	width: 100%;
 	height: 100%;
@@ -185,25 +217,37 @@ button:focus {outline:0 !important;}
 .horizontal-container {
 	white-space: nowrap;
 	height: 60px;
-	overflow-x: auto;
-	overflow-y: hidden;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+	/*overflow-x: auto;
+	overflow-y: hidden;*/
+	position: relative;
+	/*bottom: 0;*/
+	/*width: 100%;*/
 }
 
 .horizontal-container>container {
 	padding: 0;
 }
+
 .colour-wrapper {
-	height: 60px;
+	width: 842px;
 	margin: 0 auto;
+}
+
+@media (max-width: 849px) {
+	.colour-wrapper {
+	 	width: 430px;
+	}
+
+	#my_camera {
+		height: 430px;
+	}
 }
 
 .colour-wrapper ul {
 	display: table;
-	height: 60px;
+	height: 70px;
 	width: 100%;
+
 }
 
 .colour-box {
@@ -264,10 +308,15 @@ button:focus {outline:0 !important;}
 }
 
 .colour-wrapper ul li {
-	display: table-cell;
-	height: 60px;
+	width: 70px;
+	height: 70px;
 	padding: 0;
 	position: relative;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-0-border-radius: 5px;
+	border-radius: 5px;
+	border: 4px solid #202020;
 }
 
 .colour-wrapper ul li:last-child {
