--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,10 @@
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="/styles/style.css">
+<link rel="stylesheet" href="/styles/fonts/icomoon.eot">
+<link rel="stylesheet" href="/styles/fonts/icomoon.svg">
+<link rel="stylesheet" href="/styles/fonts/icomoon.ttf">
+<link rel="stylesheet" href="/styles/fonts/icomoon.woff">
 <!--STYLES END-->
 	</head>
 
