--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,11 +21,11 @@ input:focus {outline:0 !important;}
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?h4yf3f');
-	src:url('fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
-		url('fonts/icomoon.woff?h4yf3f') format('woff'),
-		url('fonts/icomoon.ttf?h4yf3f') format('truetype'),
-		url('fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
+	src:url('/fonts/icomoon.eot?h4yf3f');
+	src:url('/fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
+		url('/fonts/icomoon.woff?h4yf3f') format('woff'),
+		url('/fonts/icomoon.ttf?h4yf3f') format('truetype'),
+		url('/fonts/icomoon.svg?h4yf3f#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
