changed to images

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,16 +32,13 @@
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="/styles/style.css">
-<link rel="stylesheet" href="/styles/fonts/icomoon.eot">
-<link rel="stylesheet" href="/styles/fonts/icomoon.svg">
-<link rel="stylesheet" href="/styles/fonts/icomoon.ttf">
-<link rel="stylesheet" href="/styles/fonts/icomoon.woff">
 <!--STYLES END-->
 	</head>
 
 	<body>
 		<div class="pull-right weather-wrapper">
-			<span class="icon-uniE602 weather">
+			<span class="weather">
+				<img src="images/SVG/uniE604.svg" alt="">
 				<span class="temperature">7&deg;</span>
 			</span><br>
 			<span>Surrey, BC</span>
