--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -4,7 +4,9 @@
 		<form class="snap-button-wrapper">
 			<div>
 				<input type="button" class="snap-button" onClick="take_snapshot()"><br>
-				<span class="icon-uniE606 camera-icon"></span>
+				<span class="camera-icon">
+					<img src="images/SVG/uniE606.svg" alt="camera icon">
+				</span>
 			</div>
 		</form>
 	<!-- <div id="results">Your captured image will appear here...</div> -->
