--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,7 +19,7 @@ input:focus {outline:0 !important;}
  *  Weather icons
  */
 
-@font-face {
+/*@font-face {
 	font-family: 'icomoon';
 	src:url('/fonts/icomoon.eot?h4yf3f');
 	src:url('/fonts/icomoon.eot?#iefixh4yf3f') format('embedded-opentype'),
@@ -37,10 +37,10 @@ input:focus {outline:0 !important;}
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	line-height: 1;
+	line-height: 1;*/
 
 	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
+/*	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
@@ -67,7 +67,7 @@ input:focus {outline:0 !important;}
 }
 .icon-uniE604:before {
 	content: "\e604";
-}
+}*/
 
 .weather-wrapper {
 	position: absolute;
@@ -80,6 +80,10 @@ input:focus {outline:0 !important;}
 
 .weather {
 	font-size: 25px;
+}
+
+.weather img {
+	width: 32px;
 }
 
 .temperature {
@@ -115,6 +119,7 @@ input:focus {outline:0 !important;}
 	padding: 12px;
 	color: white;
 	background-color: black;
+	padding-top: 10px;
 }
 
 .camera-wrapper {
