--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
 		-->
 
 		<!--STYLES-->
+<link rel="stylesheet" href="/styles/animate.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="/styles/style.css">
