--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,5 +1,8 @@
 <div class="camera-wrapper">
-	<div id="my_camera"></div>		
+	<div id="my_camera">
+		
+	</div>		
+		<img src="images/focus.svg" alt="focus" class="focusing not-display">
 		<!-- A button for taking snaps -->
 		<form class="snap-button-wrapper">
 			<div>
@@ -16,7 +19,7 @@
 			<ul class="list-inline">
 				<li class="poppy-red element-item">
 					<span class="colour-box"></span>
-					<div class="colour-box-hover">poppy red</div>
+					<div class="colour-box-hover">poppy<br>red</div>
 				</li>
 				<li class="nectarine element-item">
 					<span class="colour-box"></span>		
@@ -24,11 +27,11 @@
 				</li>
 				<li class="lemon-zest element-item">
 					<span class="colour-box lemon-zest"></span>		
-					<div class="colour-box-hover">lemon-zest</div>
+					<div class="colour-box-hover">lemon<br>zest</div>
 				</li>
 				<li class="tender-shoots element-item">
 					<span class="colour-box"></span>		
-					<div class="colour-box-hover">tender-shoots</div>
+					<div class="colour-box-hover">tender<br>shoots</div>
 				</li>
 				<li class="emerald element-item">
 					<span class="colour-box"></span>		
@@ -36,31 +39,31 @@
 				</li>
 				<li class="dusk-blue element-item">
 					<span class="colour-box"></span>		
-					<div class="colour-box-hover">dusk-blue</div>
+					<div class="colour-box-hover">dusk<br>blue</div>
 				</li>
 				<li class="african-violet element-item">
 					<span class="colour-box"></span>		
-					<div class="colour-box-hover">african-violet</div>
+					<div class="colour-box-hover">african<br>violet</div>
 				</li>
 				<li class="ballerenia-pink element-item">
 					<span class="colour-box"></span>		
-					<div class="colour-box-hover">linen</div>
+					<div class="colour-box-hover">ballerenia<br>pink</div>
 				</li>
 				<li class="pewter-grey element-item">
 					<span class="colour-box"></span>			
-					<div class="colour-box-hover">tidal-foam</div>
+					<div class="colour-box-hover">pewter<br>grey</div>
 				</li>
 				<li class="black element-item">
 					<span class="colour-box"></span>			
-					<div class="colour-box-hover">alloy</div>
+					<div class="colour-box-hover">black</div>
 				</li>
 				<li class="camping-brown element-item">
 					<span class="colour-box"></span>
-					<div class="colour-box-hover">sunflower</div>
+					<div class="colour-box-hover">camping<br>brown</div>
 				</li>
 				<li class="white element-item">
 					<span class="colour-box"></span>	
-					<div class="colour-box-hover">vibrant orange</div>
+					<div class="colour-box-hover">white</div>
 				</li>
 			</ul>
 		</div>
