--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
 		<!-- Viewport mobile tag for sensible mobile support -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta charset="utf-8"/>
-		
+		<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 		<!--  
 				Stylesheets and Preprocessors
 				==============================
