--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -2,7 +2,13 @@
 	<div id="my_camera">
 		
 	</div>		
+		<span class="check-done">
+			<img src="images/check.svg" alt="checkmark">
+			We got it!
+		</span>
 		<img src="images/focus.svg" alt="focus" class="focusing not-display">
+		<img src="images/focus.svg" alt="focus" class="focusing2 not-display">
+		<img src="images/focus.svg" alt="focus" class="focusing3 not-display">
 		<!-- A button for taking snaps -->
 		<form class="snap-button-wrapper">
 			<div>
@@ -70,6 +76,7 @@
 	</div>
 </div>
 
+<a href="/story" class="openStoryPage">next page</a>
 
 
 
