--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -1,13 +1,12 @@
 <div class="content-wrapper">
-	<div class="back-button">
-		<a href="/">Choose color again</a>
-	</div>
 	<div class="sidebar">
 		<div id="nav-anchor"></div>
 		<nav>
+			<div class="nav-head">
+				<img src="images/tea-logo.png" alt="logo">
+			</div>
 			<ul class="slide-control">
 				<li class="slide-1">
-					<!-- &nbsp; -->
 					<a href="#flavor-1">
 						Citrus
 					</a>
@@ -29,11 +28,21 @@
 				</li>
 			</ul>
 		</nav>
+		<div class="back-button">
+			<a class="btn try-again-btn" href="/">
+				Try different<br> colour
+			</a>
+		</div>
 	</div><!--End sidebar-->
 
 	<div id="content">
 		<section id="flavor-1">
-			flavor-1
+			<div>
+				<img src="images/teabag.svg" alt="tea bag">
+			</div>	
+			<div>
+				<img src="images/cup.png" alt="tea cup">	
+			</div>
 		</section>
 		<section id="flavor-2">
 			flavor-2
