Make it mobile friendly

--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -28,20 +28,25 @@
 				</li>
 			</ul>
 		</nav>
-		<div class="back-button">
-			<a class="btn try-again-btn" href="/">
-				Try different<br> colour
-			</a>
-		</div>
 	</div><!--End sidebar-->
 
 	<div id="content">
 		<section id="flavor-1">
-			<div>
+			<!-- <div class="teabag">
 				<img src="images/teabag.svg" alt="tea bag">
+			</div>
+			<div class="mayharvest">
+				<img src="images/mayharvest.png" alt="may harvest">
 			</div>	
-			<div>
+			<div class="teacup">
 				<img src="images/cup.png" alt="tea cup">	
+			</div> -->
+			<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/90qhv3IMfuw" frameborder="0" allowfullscreen></iframe> -->
+			<div class="tea-1" id="home-video">
+				<img src="images/tea-1.png" data-video="//www.youtube.com/embed/90qhv3IMfuw?autoplay=1" alt="tea recommendation" title="Play Video">
+				<span class="play-button">
+					<img src="images/play-button.svg" alt="play-button">
+				</span>
 			</div>
 		</section>
 		<section id="flavor-2">
@@ -55,4 +60,9 @@
 		</section>
 	</div>
 </div>
-
+<div class="back-button">
+	<a class="try-again-btn" href="/">
+		<img src="images/capture-icon.svg" alt="capture again">
+	</a>
+	<!-- <h5>Capture the <Br>colour again</h5> -->
+</div>
