--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -26,26 +26,55 @@ a:hover {
 }
 
 .back-button {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
-	width: 151px;
+	right: 0;
+	width: 95px;
+	height: 80px;
+}
+
+.back-button h5 {
+	font-weight: bold;
+	font-size: 10px;
 }
 
 .try-again-btn {
-	color: white;
-	background-color: #677718;
-	border-radius: 1000px;
-	width: 120px;
-	height: 120px;
-	margin: 0 auto;
-	padding: 0;
-	font-weight: 100;
-	padding-top: 42px;
+	/*background-color: #db4437;*/
+	height: 56px;
+	position: relative;
+	width: 56px;
+	display: block;
+	border: 1px solid #677718;
+	border-radius: 50%;
+	box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+	box-sizing: content-box;
+	cursor: pointer;
+	pointer-events: auto;
+	-webkit-user-drag: none;
+	-webkit-transform: scale(1) rotate(360deg);
+	transform: scale(1) rotate(360deg);
+	-webkit-transition: -webkit-transform 150ms cubic-bezier(.4,0,1,1);
+	transition: transform 150ms cubic-bezier(.4,0,1,1);
 }
 
-.try-again-btn:hover {
+/*.try-again-btn:hover {
 	color: #fff;
 	background-color: rgba(103, 119, 24, 0.9);
+}*/
+
+.try-again-btn>img {
+	left: 0;
+	margin-left: 16px;
+	margin-top: 16px;
+	position: absolute;
+	top: 0;
+	-webkit-transition: all .2s cubic-bezier(.4,0,.2,1);
+	transition: all .2s cubic-bezier(.4,0,.2,1);
+	background-size: 24px;
+	display: block;
+	height: 24px;
+	width: 24px;
+	-webkit-user-drag: none;
 }
 
 /**
@@ -495,17 +524,13 @@ a:hover {
 }
 
 #content section div {
+	padding-top: 40px;
 	padding-left: 150px;
 }
 
-#flavor-1 {
-	
+#flavor-1 div img {
+	width: 100%;
 }
-
-#flavor-1>div img {
-	width: 500px;
-}
-
 
 #flavor-2 {
 	background-color: orange;
@@ -517,6 +542,72 @@ a:hover {
 
 #flavor-4 {
 	background-color: blue;
+}
+
+/*
+	Video Playing
+ */
+#home-video, #home-video img {
+	min-width: 100%;
+	position: relative;
+	display: block;
+	overflow: hidden;
+	cursor: pointer;
+}
+
+#home-video span.play-button {
+	/*background: url("../images/play-button.svg");*/
+	width: 40px;
+	opacity: 0.3;
+	top: 20%;
+	left: 35%;
+	position: absolute;
+	display: block;
+	background-repeat: no-repeat;
+}
+
+/*@media screen and (min-width: 992px) {
+	#home-video span.play-button {
+		top: 25%;
+		left: 47%;
+	}
+}
+
+@media screen and (min-width: 1700px) {
+	#home-video span.play-button {
+		top: 35%;
+	}
+}*/
+
+/*#home-video:hover span.play-button {
+	background-position: 0 150px;
+	width: 150px;
+	height: 150px;
+}*/
+
+#home-video span.close-button {
+	background: url("../images/close-button.svg");
+	width: 22px;
+	height: 22px;
+	top: 8%;
+	right: 2%;
+	position: absolute;
+	display: block;
+	z-index: 100;
+	background-repeat: no-repeat;
+}
+
+/*#home-video span.close-button:hover {
+	background-position: 0 100px;
+	width: 100px;
+	height: 100px;
+}*/
+
+#home-video iframe#video-player {
+	min-height: 600px;
+	top: 0;
+	left: 0;
+	position: absolute;
 }
 
 
