New design for Irene

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta charset="utf-8"/>
 		<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/specimen_files/grid_12-825-55-15.css">
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/specimen_files/specimen_stylesheet.css">
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/stylesheet.css">
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/specimen_files/grid_12-825-55-15.css">
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/specimen_files/specimen_stylesheet.css">
+		<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/stylesheet.css">
 		<!--  
 				Stylesheets and Preprocessors
 				==============================
@@ -32,7 +38,19 @@
 <link rel="stylesheet" href="/styles/animate.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/styles/bootstrap/bootstrap.min.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/specimen_files/grid_12-825-55-15.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/specimen_files/specimen_stylesheet.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-adobe-garamond/stylesheet.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/specimen_files/grid_12-825-55-15.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/specimen_files/specimen_stylesheet.css">
+<link rel="stylesheet" href="/styles/fonts/webfontkit-univers/stylesheet.css">
 <link rel="stylesheet" href="/styles/style.css">
+<link rel="stylesheet" href="/styles/webfontkit-adobe-garamond/specimen_files/grid_12-825-55-15.css">
+<link rel="stylesheet" href="/styles/webfontkit-adobe-garamond/specimen_files/specimen_stylesheet.css">
+<link rel="stylesheet" href="/styles/webfontkit-adobe-garamond/stylesheet.css">
+<link rel="stylesheet" href="/styles/webfontkit-univers/specimen_files/grid_12-825-55-15.css">
+<link rel="stylesheet" href="/styles/webfontkit-univers/specimen_files/specimen_stylesheet.css">
+<link rel="stylesheet" href="/styles/webfontkit-univers/stylesheet.css">
 <!--STYLES END-->
 	</head>
 
