--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -1,62 +1,138 @@
 <div class="content-wrapper">
 	<div class="sidebar">
 		<div id="nav-anchor"></div>
-		<nav>
-			<div class="nav-head">
-				<img src="images/tea-logo.png" alt="logo">
-			</div>
-			<ul class="slide-control">
-				<li class="slide-1">
-					<a href="#flavor-1">
-						Citrus
-					</a>
-				</li>
-				<li class="slide-2">
-					<a href="#flavor-2">
-						Bittersweet
-					</a>
-				</li>
-				<li class="slide-3">
-					<a href="#flavor-3">
-						Sweet
-					</a>
-				</li>
-				<li class="slide-4">
-					<a href="#flavor-4">
-						Disgusting
-					</a>
-				</li>
-			</ul>
-		</nav>
+			<section>
+				<div class="inner-wrapper">
+					<div class="nav-head">
+						<img src="images/tea-logo.png" alt="logo">
+					</div>
+					<div class="flavor-wrapper">
+						<!-- <h5>
+							Thank you for your participation.
+							<br>The colour detected is..
+						</h5> -->
+						<h5>
+							Here is our recommendation
+						</h5>
+						<!-- <div class="dusk-blue selected-colour">
+							<span class="colour-box">
+								Dusk Blue
+							</span>		
+						</div>
+						<img src="images/arrow.svg" alt="arrow">
+						<h5>
+							Your mood is
+						</h5>
+						<h1 class="thankyou-header">
+							Relaxing
+						</h1> -->
+						<div class="relaxing">
+							<img src="images/relaxing.png" alt="">	
+						</div>
+						
+						<nav>
+							<h5>
+								Below are different flavor choices
+							</h5>
+							<ul class="slide-control list-inline">
+								<li class="slide-1">
+									<a href="#flavor-1">
+										Sweet
+									</a>
+								</li>
+								<li class="slide-2">
+									<a href="#flavor-2">
+										Floral
+									</a>
+								</li>
+								<li class="slide-3">
+									<a href="#flavor-3">
+										Nutty
+									</a>
+								</li>
+								<li class="slide-4">
+									<a href="#flavor-4">
+										Fruity
+									</a>
+								</li>
+								<li class="slide-5">
+									<a href="#flavor-5">
+										Chur
+									</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</section>
+		
 	</div><!--End sidebar-->
 
 	<div id="content">
 		<section id="flavor-1">
-			<!-- <div class="teabag">
-				<img src="images/teabag.svg" alt="tea bag">
+			<div class="inner-wrapper african-violet">
+				<div class="flavor-box">
+					<h2 class="pull-right">
+						Sweet
+					</h2>
+				</div>
+				<!-- <div class="tea-1" id="home-video">
+					<img src="images/tea-1.png" data-video="//www.youtube.com/embed/90qhv3IMfuw?autoplay=1" alt="tea recommendation" title="Play Video">
+					<span class="play-button">
+						<img src="images/play-button.svg" alt="play-button">
+					</span>
+				</div> -->
+				<div class="recommended-tea">
+					<div class="teabag">
+						<img src="images/teabag.svg" alt="tea bag">
+					</div>
+					<div class="mayharvest">
+						<img src="images/mayharvest.png" alt="may harvest">
+					</div>	
+					<div class="teacup">
+						<img src="images/cup.png" alt="tea cup">	
+					</div>	
+				</div>
 			</div>
-			<div class="mayharvest">
-				<img src="images/mayharvest.png" alt="may harvest">
-			</div>	
-			<div class="teacup">
-				<img src="images/cup.png" alt="tea cup">	
-			</div> -->
+			
 			<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/90qhv3IMfuw" frameborder="0" allowfullscreen></iframe> -->
-			<div class="tea-1" id="home-video">
-				<img src="images/tea-1.png" data-video="//www.youtube.com/embed/90qhv3IMfuw?autoplay=1" alt="tea recommendation" title="Play Video">
-				<span class="play-button">
-					<img src="images/play-button.svg" alt="play-button">
-				</span>
-			</div>
+			
 		</section>
 		<section id="flavor-2">
-			flavor-2
+			<div class="inner-wrapper dusk-blue">
+				<div class="flavor-box">
+					<h2 class="pull-right">
+						Floral
+					</h2>
+				</div>
+			</div>
 		</section>
 		<section id="flavor-3">
-			flavor-3
+			<div class="inner-wrapper camping-brown">
+				<div class="flavor-box">
+					<h2 class="pull-right">
+						Nutty
+					</h2>
+				</div>
+			</div>
 		</section>
 		<section id="flavor-4">
-			flavor-4
+			<div class="inner-wrapper nectarine">
+				<div class="flavor-box">
+					<h2 class="pull-right">
+						Fruity
+					</h2>
+				</div>
+			</div>
+		</section>
+		<section id="flavor-5">
+			<div class="inner-wrapper pewter-grey">
+				<div class="flavor-box">
+					<h2 class="pull-right">
+						Chur
+					</h2>
+				</div>
+			</div>
 		</section>
 	</div>
 </div>
