--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,11 +3,14 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	background-color: #f7f7f7;
 	overflow-x: hidden;
-	font-family: 'Libre Baskerville', serif;
+	font-family: 'univers_ce_45_lightregular';
+	font-family: 'adobe_garamondregular';
+	background-color: #fff !important;
 }
 
+/*font-family: 'adobe_garamondregular';*/
+/*font-family: 'univers_ce_55_mediumbold';*/
 /*::-webkit-scrollbar { 
     display: none; 
 }*/
@@ -25,6 +28,9 @@ a:hover {
 	text-decoration: none;
 }
 
+h5 {
+	font-size: 0.8em !important;
+}
 .back-button {
 	position: fixed;
 	bottom: 0;
@@ -359,6 +365,9 @@ a:hover {
 	height: 100%;
 	text-align: center;
 	position: relative;
+	font-family: 'univers_ce_55_mediumbold';
+	font-size: 0.7em;
+	line-height: 6;
 }
 
 .poppy-red {
@@ -487,25 +496,71 @@ a:hover {
 	-o-transition: background-color .5s;
 	-webkit-transition: background-color .5s;
 	transition: background-color .5s;
-	top: 50%;
-	padding: 20px 35px;
-	border-top: 1px solid #e0dedd;
+	/*top: 50%;*/
+	padding: 0px 35px;
+	padding-bottom: 14px;
+	/*border-top: 1px solid #e0dedd;*/
 }
 
-.slide-control li:last-child {
-	border-bottom: 1px solid #e0dedd;
-}
-
-.sidebar {
-	position: fixed;
-	height: 100vh;
-	background-color: rgba(255, 255, 255, 0.9);
+.slide-control li a {
+	/*font-family: 'univers_ce_55_mediumbold';*/
+	font-size: 0.8em;
 	color: #333;
 }
 
+.flavor-wrapper {
+	/*margin-top: 70px;*/
+	position: relative !important;
+	/*margin-top: -50px;*/
+	padding-top: 50px;
+}
+
+
+.flavor-wrapper h5{
+	font-family: 'univers_ce_55_mediumbold';
+	color: #c9c9ca;
+	text-transform: uppercase;
+	line-height: 1.8;
+}
+
+.thankyou-header {
+	font-style: italic;
+	/*margin-bottom: 40px;*/
+	font-size: 6em;
+}
+
+.sidebar {
+	/*position: fixed;*/
+	top: 0;
+	width: 100%;
+	text-align: center;
+	height: 100vh;
+	color: #333;
+}
+
+.sidebar>section {
+	height: 100%;
+	padding: 15px;
+}
+.sidebar>section>.inner-wrapper {
+	background-image: url("../images/texture.jpg");
+	background-repeat: repeat;
+	height: 100%;
+}
+
+nav {
+	/*position: relative !important;*/
+	margin-top: 40px;
+	bottom: 0;
+}
+
+.nav-head {
+	position: relative !important;
+}
+
 .nav-head>img {
-	width: 138px;
-	padding: 25px;
+	width: 125px;
+	padding: 20px;
 }
 .sticky-nav {
 	z-index: 99;
@@ -517,15 +572,75 @@ a:hover {
 	font-weight: bold;
 }
 
+.relaxing {
+	width: 80%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+.relaxing>img {
+	width: 100%;
+}
+.selected-colour {
+	width: 70px;
+	height: 70px;
+	margin: 0 auto;
+	margin-top: 15px;
+	padding: 0;
+	position: relative;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-0-border-radius: 5px;
+	border-radius: 5px;
+}
+
 #content section {
 	width: 100%;
 	height: 100vh;
 	text-align: center;
+	padding: 20px;
 }
 
 #content section div {
-	padding-top: 40px;
-	padding-left: 150px;
+	/*padding-top: 40px;
+	padding-left: 150px;*/
+	height: 100%;
+}
+
+.recommended-tea {
+	position: relative !important;
+	padding-top: 8%;
+}
+
+.teabag {
+	width: 133px;
+	margin: 0 auto;
+	height: 205px !important;
+}
+
+.mayharvest {
+	width: 395px;
+	margin: 0 auto;
+	height: 73px !important; 
+	margin-bottom: 2%;
+}
+
+.teacup {
+	width: 300px;
+	height: 153px !important;
+	margin: 0 auto;
+}
+
+.flavor-box {
+	margin-top: -25px;
+	margin-right: 5px;
+	position: absolute;
+	right: 0;
+}
+
+.flavor-box h2 {
+	font-size: 45px;
+	/*text-transform: uppercase;*/
 }
 
 #flavor-1 div img {
@@ -533,15 +648,15 @@ a:hover {
 }
 
 #flavor-2 {
-	background-color: orange;
+	
 }
 
 #flavor-3 {
-	background-color: green;
+	
 }
 
 #flavor-4 {
-	background-color: blue;
+	
 }
 
 /*
